Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-2\documentclass[12pt]{amsbook}
+\documentclass[12pt]{amsbook}
 \title{Honours Linear Algebra II}
 %\author{Kayue Daniel Wong}  
 \usepackage{geometry}
