--- a/main.tex
+++ b/main.tex
@@ -1,43 +1,100 @@
-\documentclass[12pt]{amsbook}
-\title{Honours Linear Algebra II}
-%\author{Kayue Daniel Wong}  
+\documentclass[11pt,openany]{book}
+
+% Encoding and fonts
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+
+% Math packages
+\usepackage{amsmath, amssymb, amsthm, mathtools, bm}
+
+% Layout and spacing
 \usepackage{geometry}
-\usepackage{etoolbox}
-\usepackage{amscd,amssymb,verbatim,xcolor,mathrsfs}
+\geometry{margin=1in}
+\usepackage{setspace}
+\onehalfspacing
+
+% Theorem environments with cleveref support
+\usepackage{aliascnt}
+
+
+\theoremstyle{plain}
+\newtheorem{theorem}{Theorem}[chapter]
+\newaliascnt{lemma}{theorem}
+\newtheorem{lemma}[lemma]{Lemma}
+\aliascntresetthe{lemma}
+\providecommand*{\lemmaautorefname}{Lemma}
+
+\newaliascnt{proposition}{theorem}
+\newtheorem{proposition}[proposition]{Proposition}
+\aliascntresetthe{proposition}
+\providecommand*{\propositionautorefname}{Proposition}
+
+\newaliascnt{claim}{theorem}
+\newtheorem{claim}[claim]{Proposition}
+\aliascntresetthe{claim}
+\providecommand*{\claimautorefname}{Claim}
+
+
+\newaliascnt{corollary}{theorem}
+\newtheorem{corollary}[corollary]{Corollary}
+\aliascntresetthe{corollary}
+\providecommand*{\corollaryautorefname}{Corollary}
+
+\theoremstyle{definition}
+\newaliascnt{definition}{theorem}
+\newtheorem{definition}[definition]{Definition}
+\aliascntresetthe{definition}
+\providecommand*{\definitionautorefname}{Definition}
+
+\newaliascnt{example}{theorem}
+\newtheorem{example}[example]{Example}
+\aliascntresetthe{example}
+\providecommand*{\exampleautorefname}{Example}
+
+\theoremstyle{remark}
+\newaliascnt{remark}{theorem}
+\newtheorem{remark}[remark]{Remark}
+\aliascntresetthe{remark}
+\providecommand*{\remarkautorefname}{Remark}
+
+% Enumeration
+\usepackage{enumitem}
+\setlist{topsep=4pt,itemsep=2pt,parsep=2pt}
+
+% Graphics and diagrams
+\usepackage{graphicx}
 \usepackage{tikz-cd}
-\usepackage{longtable, multirow}
-\usepackage{soul,cancel}
-\usepackage{apptools}
+
+% Header and footer
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhead[L]{\leftmark}
+\fancyhead[R]{\thepage}
+\fancyfoot[C]{}
+
+% Colors and hyperlinks
 \usepackage{xcolor}
-\usepackage{tikz} 
-\usepackage{longtable}
-\usepackage{amsmath} 
-\usepackage{stmaryrd}
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{assumption}[theorem]{Assumption}
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{conjecture}[theorem]{Conjecture}
-\newtheorem{definition}[theorem]{Definition}
-\newtheorem{example}[theorem]{Example}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{remark}[theorem]{Remark}
-\newtheorem*{claim}{Claim}
-\newtheorem*{fact}{Fact}
+\definecolor{darkblue}{rgb}{0,0,0.5}
+\usepackage{hyperref}
+\hypersetup{
+  colorlinks=true,
+  linkcolor=darkblue,
+  citecolor=darkblue,
+  urlcolor=darkblue,
+  pdfborder={0 0 0}
+}
 
-
-\renewcommand{\contentsname}{Honours Linear Algebra II - Table of Contents}
-\patchcmd{\tocchapter}{#1}{\MakeUppercase{#1}}{}{}
-
+% Title
+\title{MAT 3042 - Honours Linear Algebra II}
+\date{}
 \begin{document}
-
-
+\maketitle
 \tableofcontents
 
 
-
 \chapter{Some Algebraic Background}
-In MAT2042, one studies vector spaces over $\mathbb{R}$ or $\mathbb{C}$. One main goal of this course is to generalize the theories to other algebraic structures other than $\mathbb{R}$ or $\mathbb{C}$. We will roughly go through the very basics of abstract algebras, and give a definition of a field.
+In MAT2042, one studies vector spaces over $\mathbb{R}$ or $\mathbb{C}$. One main goal of this course is to generalize the theories to other algebraic structures other than $\mathbb{R}$ or $\mathbb{C}$. We will roughly go through the very basics of abstract algebras, and give a definition of a field. More details will be covered in MAT3004 (Abstract Algebra I). 
 
 \section{Groups}
 When one talks about algebraic structure, we would think of addition $a + b$ and multiplication $a \cdot b$. In general, we make the following definition:
@@ -98,7 +155,7 @@ Now we study algebraic structure with both addition and multiplication structure
 
 Note that $(R, \cdot)$ is not necessarily a group. For instance, $2\mathbb{Z}$ does not have a multiplicative identity $1 \notin 2\mathbb{Z}$. 
 
-In this course, we will focus on the following kind of rings:
+Unless stated otherwise, we will assume the following properties hold for a ring $(R,+,\cdot)$:
 \begin{definition}
 Let $(R,+,\cdot)$ is a ring. We say $R$ is 
 \begin{itemize}
@@ -124,9 +181,9 @@ Now we can make precise which algebraic objects we can generalize from $\mathbb{
 \begin{definition}
     Let $(\mathbb{F},+,\cdot)$ be a unital commutative ring. We say $\mathbb{F}$ is a {\bf field} if for all $a \in \mathbb{F} \backslash \{0\}$, there exists $a^{-1} \in \mathbb{F} \backslash \{0\}$ such that
     $$a \cdot a^{-1} = 1.$$
-    The {\bf characteristic} of $\mathbb{F}$ is the smallest positive number $\mathrm{char}(\mathbb{F}) = p$ such that 
+    The {\bf characteristic} of $\mathbb{F}$ is the smallest positive integer $\mathrm{char}(\mathbb{F}) = p$ such that 
     $$\overbrace{1+1+ \dots + 1}^{p\ terms} = 0$$ 
-    (if no such number exists, then we let $\mathrm{char}(\mathbb{F}) = 0$).
+    (if no such integer exists, then we let $\mathrm{char}(\mathbb{F}) = 0$).
 \end{definition}
 
 \begin{example}
@@ -145,6 +202,157 @@ Now we can make precise which algebraic objects we can generalize from $\mathbb{
 In the Homework set, you will construct a field $\mathbb{F}$ with $9$ elements. In general, all $\mathbb{F}$ with finitely many elements must have
 $$|\mathbb{F}| = p^r$$
 for some prime number $p$, with $\mathrm{char}(\mathbb{F}) = p$.
+
+\section{Polynomials}
+
+\begin{definition}  
+Let $F$ be a field. A polynomial over $F$ has the form
+    \[
+        p(x) = a_n x^n + \dots + a_1 x + a_0, \quad (a_0 \neq 0)
+    \]
+    Here
+    \begin{enumerate}
+    \item $a_n \neq 0$ is called the \textit{leading term} of $p(x)$; 
+    \item $n$ is called the \textit{degree}; $a_n$ is called the \textit{leading coefficient}; 
+    \item $a_0, \dots, a_n$ are called the \textit{coefficients}.
+\end{enumerate}
+    A polynomial over $F$ is 
+\begin{enumerate}
+    \item \textit{monic} if its leading coefficient is 1.
+
+    \item \textit{irreducible} if for any $q(x), r(x) \in F[x]$,
+    \[
+        p(x) = q(x)r(x) \quad \Rightarrow \quad q(x) \text{ or } r(x) \text{ is constant}.
+    \]
+    Otherwise, $p(x)$ is \textit{reducible}.
+\end{enumerate}
+\end{definition}
+
+\begin{example}  
+The polynomial $p(x) = x^2 + 1$ is irreducible over $\mathbb{R}$ but reducible over $\mathbb{C}$ since
+\[
+    x^2 + 1 = (x+i)(x-i).
+\]
+\end{example}
+
+\begin{definition}  
+If $p(x) = q(x)r(x)$ with $p,q,r \in F[x]$, then:
+\begin{itemize}
+    \item $p(x)$ is divisible by $q(x)$,
+    \item $q(x)$ is a factor of $p(x)$,
+    \item $q(x) \mid p(x)$,
+    \item $p(x)$ is a multiple of $q(x)$.
+\end{itemize}
+\end{definition}
+
+For polynomials over a field, one can always factorize any polynomial into irreducible factors:
+\begin{theorem} [Unique Factorization] 
+Let $F$ be a field. Then every $f(x) \in F[x]$ can be factorized as
+\[
+    f(x) = a_n p_1(x)^{r_1} \cdots p_m(x)^{r_m}
+\]
+where $p_j$ are monic, irreducible, and distinct. This expression is unique up to the permutation of factors.
+\end{theorem}
+
+\begin{definition}  
+\begin{enumerate}
+    \item $d(x)$ is a \textit{common factor} of $f_1, \dots, f_k$ if $d \mid f_i$ for all $i$.
+    \item $d(x)$ is the \textit{greatest common divisor} (gcd) if:
+    \begin{itemize}
+        \item $d$ is monic,
+        \item $d$ divides all $f_i$,
+        \item $d$ has the largest degree among common divisors.
+    \end{itemize}
+\end{enumerate}
+\end{definition}
+Note: Relatively prime polynomials $f_1, \dots, f_k$ satisfy $\gcd(f_1,\dots,f_k) = 1$, but pairwise relative primeness does not imply overall gcd is 1.
+
+
+\begin{example}  
+If $f(x) = (x^2 + x + 1)(x^2 - 3x^2 - 4)$ and $g(x) = (x^2 + 1)(x^2 + 3x^2 + 2)$ in $\mathbb{R}[x]$, then
+\[
+    \gcd(f,g) = x +1.
+\]
+\end{example}
+
+To find the greatest common divisor, one has to divide polynomials:
+\begin{theorem} [Division Algorithm] 
+For all $p,q \in F[x]$ such that $p \neq 0$, there exist unique $s,r \in F[x]$ satisfying $\deg(r) < \deg(p)$, such that
+\[
+    q(x) = s(x) \cdot p(x) + r(x).
+\]
+Here $r(x)$ is called the \textit{remainder}.
+\end{theorem}
+
+\begin{example}  
+Given $p(x) = x^4 + 1$ and $q(x) = x^2 + 1$, division gives
+\[
+    x^4 + 1 = (x^2 - 1)(x^2 + 1) + 2.
+\]
+\end{example}
+
+With division algorithm, one can apply {\bf Euclidean algoritm} to find the gcd of two polynomials $\gcd(f_1, f_2)$:
+
+\begin{example} To find the gcd of $x^3 + 6x + 7$ and $x^2 + 3x + 2$ in $\mathbb{R}[x]$, one divide the polynomial of larger degree by that of the lower degree:
+\[
+    x^3 + 6x + 7 - (x)(x^2 + 3x + 2) = 13x + 13
+\]
+Repeat the division algorithm on the remainder:
+\[
+    x^2 + 3x + 2 - \frac{x+2}{13}(13x+13) = 0
+\]
+Now we hit a zero. Thus,
+\[
+    \gcd(x^3 + 6x + 7, x^2 + 3x + 2) = 13(x+1) = x + 1 \ (\text{monic}).
+\]
+\end{example}
+In general, the gcd of $f_1, f_2, \dots, f_k$ can be computed inductively by:
+$$\gcd(f_1, f_2, f_3, \dots f_k) = \gcd(\cdots(\gcd(\gcd(f_1,f_2),f_3)\cdots),f_k) $$
+
+One important aspect of gcd is the following theorem:
+\begin{theorem} [Bezout]
+Let $g = \gcd(f,h)$. Then there exist $r,s \in F[x]$ such that
+\[
+    g(x) = r(x)f(x) + s(x)h(x).
+\]
+More generally, $\gcd(f_1, \dots, f_k) = g$ implies the existence of $r_i \in F[x]$ such that
+\[
+    g = r_1 f_1 + \dots + r_k f_k.
+\]
+\end{theorem}
+
+Now we study the case when our polynomial has a linear factor $x - \lambda$:
+\begin{theorem}  
+For $p(x) \in F[x]$ and $\lambda \in F$, $x - \lambda$ divides $p$ if and only if $p(\lambda) = 0$.
+\end{theorem}
+\begin{proof}  
+If $(x - \lambda)$ divides $p$, then $p = (x - \lambda)q$ for some $q \in F[x]$, so clearly $p(\lambda) = 0$.  
+Conversely, if $p(\lambda) = 0$, by Division Theorem there exists $s,r \in F[x]$ with
+\[
+    p = (x - \lambda)s + r, \quad \deg(r) < 1 \ \Rightarrow\ r \ \text{constant}.
+\]
+Evaluating at $x=\lambda$ gives $0 = 0 \cdot s(\lambda) + r$, hence $r=0$ and therefore $p = (x - \lambda)s$.
+\end{proof}
+
+\begin{corollary}  
+A polynomial with degree $n$ has at most $n$ roots counting multiplicity.
+\end{corollary}
+
+\begin{definition} [Algebraically Closed] 
+A field $F$ is \textit{algebraically closed} if every non-constant polynomial $p(x) \in F[x]$ has a root $\lambda \in F$.
+\end{definition}
+
+\begin{theorem} [Fundamental Theorem of Algebra]  
+The set of complex numbers $\mathbb{C}$ is algebraically closed.
+\end{theorem}
+
+By induction, in an algebraically closed field $F$, any non-constant polynomial can be factorized as
+\[
+    p(x) = a(x - \lambda_1)^{r_1} \cdots (x - \lambda_m)^{r_m}, \quad \lambda_i \in F.
+\]
+
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2194,8 +2402,8 @@ As in the case of vector spaces, we have the {\bf correspondence} theorem and {\
     Let $N\leq M$ be $R$-modules. Then there is a 1-1 correspondence between
     \begin{align*}
         \{S\ |\ N\leq S\leq M\}\quad&\leftrightarrow\quad\{X\ |\ 0\leq X\leq M/N\}\\
-        S\quad&\mapsto\quad S/N\\
-        \bigcup_{x\in X}(x+N)\quad&\mapsfrom\quad X
+        S\quad&\rightarrow\quad S/N\\
+        \bigcup_{x\in X}(x+N)\quad&\leftarrow\quad X
     \end{align*}
 \end{theorem}
 
@@ -2818,7 +3026,7 @@ As for all finitely generated torsion modules $M$ with $\mathrm{Ann}(M)=\langle\
     $$m_i= 1\cdot m_i = (x\beta_i+yp_i^{e_i})m_i=\beta_i(m_i)\in \beta_i M.$$
     \fbox{{\bf Claim 2:} $M=M_1+\cdots +M_k$.} As before, $\mathrm{gcd}(\beta_1,\cdots ,\beta_k)=1$, so one has $\alpha_1, \dots, \alpha_k$ such that $\alpha_1\beta_1+\cdots+\alpha_k\beta_k=1$. Then for any $m\in M$,
     $$m=(\alpha_1\beta_1+\cdots+\alpha_k\beta_k)m= \alpha_1(\beta_1m)+\cdots+\alpha_k(\beta_km)$$\\
-    \fbox{{\bf  Claim 3:} $M=M_1\oplus M_2\oplus \cdots +\oplus M_k$ is a direct sum.} Suppose there exists  $m_i \in M_i$ ($i \leq i \leq k$) such that
+    \fbox{{\bf  Claim 3:} $M=M_1\oplus M_2\oplus \cdots \oplus M_k$ is a direct sum.} Suppose there exists  $m_i \in M_i$ ($i \leq i \leq k$) such that
     $$m_1 + \dots + m_k = {\bf 0}.$$
     Then 
     \begin{align*}
